722 - Adding the ability to pass in a logger implementation to jjnl v2